<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">


  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"

      android:layout_marginBottom="4dp"

      android:fontFamily="sans-serif"
      android:text="@string/create_account"
      android:textColor="@color/white"
      android:textSize="30sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toTopOf="@+id/cardView5"
      app:layout_constraintEnd_toEndOf="@+id/cardView5"
      app:layout_constraintStart_toStartOf="@+id/cardView5" />


  <androidx.cardview.widget.CardView
      android:id="@+id/cardView5"
      android:layout_width="match_parent"
      android:layout_height="550dp"

      android:layout_marginTop="0dp"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginBottom="0dp"

      android:padding="16dp"
      app:cardCornerRadius="8dp"
      app:cardElevation="8dp"
      app:cardPreventCornerOverlap="true"
      app:cardUseCompatPadding="true"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.715">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">


      <androidx.cardview.widget.CardView
          android:id="@+id/cardView1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"

          android:layout_marginTop="32dp"
          android:elevation="8dp"
          app:cardCornerRadius="8dp"
          app:cardUseCompatPadding="false"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="Name"
              android:textColor="@color/colorAccent"
              android:textSize="14sp"
              android:textStyle="bold" />

          <EditText
              android:id="@+id/editTextName"
              style="@style/Widget.AppCompat.AutoCompleteTextView"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:autofillHints="name@gamil.com"
              android:ems="18"
              android:hint="name"
              android:inputType="text"
              android:singleLine="true"
              android:textSize="14sp"
              android:textStyle="bold" />


        </LinearLayout>

      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:id="@+id/cardView2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"

          android:layout_marginTop="8dp"
          android:elevation="8dp"
          app:cardCornerRadius="8dp"
          app:cardUseCompatPadding="false"
          app:layout_constraintEnd_toEndOf="@+id/cardView1"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toStartOf="@+id/cardView1"
          app:layout_constraintTop_toBottomOf="@+id/cardView1">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text=" Email"
              android:textColor="@color/colorAccent"
              android:textSize="14sp"
              android:textStyle="bold" />

          <EditText
              android:id="@+id/editTextEnterEmail"
              style="@style/Widget.AppCompat.AutoCompleteTextView"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:autofillHints="name@gamil.com"
              android:ems="18"
              android:hint="@string/dummy_email"
              android:inputType="textEmailAddress"
              android:singleLine="true"
              android:textSize="14sp"
              android:textStyle="bold" />


        </LinearLayout>

      </androidx.cardview.widget.CardView>


      <androidx.cardview.widget.CardView
          android:id="@+id/cardView4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"

          android:layout_marginTop="12dp"
          android:elevation="8dp"
          app:cardCornerRadius="8dp"
          app:cardUseCompatPadding="false"
          app:layout_constraintEnd_toEndOf="@+id/cardView3"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toStartOf="@+id/cardView3"
          app:layout_constraintTop_toBottomOf="@+id/cardView3">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="Confirm Password"
              android:textColor="@color/colorAccent"
              android:textSize="14sp"
              android:textStyle="bold" />

          <EditText
              android:id="@+id/editTextConfirmPassword"
              style="@style/Widget.AppCompat.AutoCompleteTextView"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:autofillHints="name@gamil.com"
              android:ems="18"
              android:hint="@string/confirm_password"
              android:inputType="textPassword"
              android:singleLine="true"
              android:textSize="14sp"
              android:textStyle="bold" />


        </LinearLayout>

      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:id="@+id/cardView3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"

          android:layout_marginTop="10dp"
          android:elevation="8dp"
          app:cardCornerRadius="8dp"
          app:cardUseCompatPadding="false"
          app:layout_constraintEnd_toEndOf="@+id/cardView2"
          app:layout_constraintStart_toStartOf="@+id/cardView2"
          app:layout_constraintTop_toBottomOf="@+id/cardView2">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="Password"
              android:textColor="@color/colorAccent"
              android:textSize="14sp"
              android:textStyle="bold" />

          <EditText
              android:id="@+id/editTextEnterPassword"
              style="@style/Widget.AppCompat.AutoCompleteTextView"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:autofillHints="Password"
              android:ems="18"
              android:hint="@string/password"
              android:inputType="textPassword"
              android:singleLine="true"
              android:textSize="14sp"
              android:textStyle="bold" />


        </LinearLayout>

      </androidx.cardview.widget.CardView>

      <Button
          android:id="@+id/Register_act_register"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="4dp"
          android:background="@drawable/button_shape2"
          android:paddingStart="60dp"
          android:paddingEnd="60dp"
          android:text="@string/register"
          android:textColor="@color/white"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="@+id/cardView4"
          app:layout_constraintHorizontal_bias="0.502"
          app:layout_constraintStart_toStartOf="@+id/cardView4"
          app:layout_constraintTop_toBottomOf="@+id/cardView4"
          app:layout_constraintVertical_bias="0.262" />


      <TextView
          android:id="@+id/textView2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="start"

          android:layout_marginEnd="8dp"
          android:gravity="start"
          android:text="Already registered"
          android:textSize="17sp"
          app:layout_constraintBottom_toBottomOf="@+id/tvLoginHere"
          app:layout_constraintEnd_toStartOf="@+id/tvLoginHere"
          app:layout_constraintHorizontal_bias="1.0"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/Register_act_register"
          app:layout_constraintVertical_bias="1.0" />

      <TextView
          android:id="@+id/tvLoginHere"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="end"
          android:layout_marginEnd="32dp"
          android:layout_marginBottom="16dp"
          android:gravity="end"
          android:text="Login here"
          android:textColor="@color/Login"
          android:textSize="20sp"
          android:textStyle="bold"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


  </androidx.cardview.widget.CardView>

  <ProgressBar
      android:id="@+id/register_progressBar"
      style="?android:attr/progressBarStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:visibility="invisible"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>